finish implement patient and appointment relationship
